Closed Bug 384759 Opened 18 years ago Closed 18 years ago

Fix "startup override check" code to understand new "pre" versions

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)

References

()

Details

(Keywords: fixed1.8.1.5)

Attachments

(1 file)

Part of our "do we show the user a special page for a release version" code is still looking for the old +/no-+ system of nightlies vs. releases. We're no longer in that world. 470 // for non-nightly builds, show a special start page 471 PreferenceManager* prefManager = [PreferenceManager sharedInstance]; 472 NSString* vendorSubString = [prefManager getStringPref:"general.useragent.vendorSub" withSuccess:NULL]; 473 if (![vendorSubString hasSuffix:@"+"]) { 474 // has the user seen this already? If I'm reading the code right, all this means right now is that we're doing extra checking (every build) instead of weeding out the nightlies immediately, but I'm not sure. This startup override stuff confuses me greatly....
Flags: camino1.6?
Attached patch fixSplinter Review
Good catch; this was causing us to show the override page in nightly builds.
Assignee: nobody → stuart.morgan
Status: NEW → ASSIGNED
Attachment #268684 - Flags: superreview?(joshmoz)
Attachment #268684 - Flags: superreview?(joshmoz) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.5
Resolution: --- → FIXED
Er, for completeness's sake, do we want this on the 1_5 branch and/or 1_8_0? In theory no one will be using nightlies from those branches, but both now have the "pre" nomenclature.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: