Camino only - Bug 384759: Update startup version check code to look for 'pre' rather than '+'. r/sr=josh